--- a/index.html
+++ b/index.html
@@ -1,75 +1,63 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>简历</title>
-</head>
-<style>
-    h3{
-        color:rgb(52, 153, 248);
-        background-color: rgb(205, 205, 238);
-        line-height: 40px;
-        padding-left: 10px;
-        border-radius: 5px;
-        box-shadow: 10px 10px 10px #f6eaea;
-    }
-    .theimg{
-        text-align: center;
-    }
-    h1{
-        text-align: center;
-    }
-    tr{
-        text-align: center;
-    }
-    .red{
-        color:rgb(248, 229, 229);
-    }
-    img{
-        width:200px;
-        transition:1s;
-    }
-    img:hover{
-        transform:scale(1.05);
-    }
-    .container{
-        width:960px;
-        margin:0 auto;
-        background-color: rgba(119, 248, 242, 0.223);
-    }
+<!DOCTYPE html>  
+<html lang="en">  
+<head>  
+<meta charset="UTF-8">  
+<meta name="viewport" content="width=device-width, initial-scale=1.0">  
+<title>个人简历</title>  
+<link rel="stylesheet" href="styles.css">  
+</head>  
+<body>  
+  
+<header class="fixed-header">  
+    <h1>个人简历</h1>  
+</header>  
+  
+<section class="resume-section">  
+    <h3>基本信息</h3>  
+    <ul> 
+        <li>姓名：李卓然</li> 
+        <li>性别：沃尔玛塑料袋</li>  
+        <li>爱好：玩游戏</li>  
+        <li>联系方式：143789-221</li>
+        <li>特长：熬夜</li>
+        <li>求职意向：底薪10w+（梦一个）</li>
+        <li>婚姻状况：未婚</li>
+        <li>国籍：中国</li>
+        <li>民族：汉族</li>
+        <li>政治面貌：团员</li>
+    </ul>  
+</section>  
+  
+<section class="resume-section">  
+    <h3>工作经验</h3>  
+    <ul>  
+        <li>小学组长：会收作业，小学老师的好帮手</li>  
+        <li>加里敦学校教务处主任：严于律人，宽以待己</li> 
+        <li>宣传部副部长：会简单的推送制作，海报制作，新闻稿撰写</li> 
+    </ul>  
+</section>  
+  
+<section class="resume-section">  
+    <h3>教育经历</h3>  
+    <ul>  
+        <li><p class="pink">加里敦大学博士</p></li> 
+        <li><p class="pink">上海对外经贸大学本科</p></li> 
+    </ul>  
+    <table class="school-table">  
+        <tr>  
+            <th>学校</th>  
+            <th>职务</th>  
+        </tr>  
+        <tr>  
+            <td>加里敦</td>  
+            <td>宣传部副部长</td> 
+        </tr>  
+    </table>  
 
-</style>
-<body>
-
-    <h1><i><font color="blue">lzr</font></i></h1>
-    <img src="https://img0.baidu.com/it/u=3614091135,566361341&fm=253&fmt=auto&app=138&f=JPEG?w=500&h=518" alt="这是一只狗" width="200">
-    <hr>
-    <h3>基本信息</h3>
-    <ul>
-        <li>性别：沃尔玛塑料袋</li>
-        <li>爱好：玩光与夜之恋</li>
-    </ul>
-    <h3>工作经验</h3>
-    <ul>
-        <li>小学组长</li>
-        <li>加里敦学校教务处主任</li>
-    </ul>
-    <h3>教育经历</h3>
-    <ul>
-        <li><p class="pink">加里敦大学博士</p></li>
-    </ul>
-    <a href="https://www.baidu.com">fand her</a>   
-    <table style="width:100%" border="1" cellspacing="0">
-        <tr>
-            <td><b>学校</b></td>
-            <td><b>职务</b></td>
-        </tr>
-        <tr>
-            <td><b>加里敦</b></td>
-            <td><b>教务处主任</b></td>
-        </tr>
-    </table>
-    <a href="form.html">填写联系表单</a>
-</body>
+</section>  
+  
+<a href="https://www.baidu.com" class="animated-link">fand her</a>  
+<a href="form.html" class="animated-link">填写联系表单</a>  
+  
+</body>  
 </html>
